[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mongoflow"
dynamic = ["version"]
authors = [
    {name = "Caio Norder", email = "caio@caionorder.com"},
]
description = "Elegant MongoDB Object Document Mapper (ODM) for Python - fluent query builder included"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["mongodb", "odm", "orm", "database", "nosql", "query-builder", "mongoflow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Framework :: FastAPI",
    "Framework :: Flask",
]

dependencies = [
    "pymongo>=4.0,<5.0",
    "python-dateutil>=2.8.0",
    "typing-extensions>=4.0.0;python_version<'3.10'",
]

[project.optional-dependencies]
cache = ["redis>=4.0.0", "hiredis>=2.0.0"]
validation = ["pydantic>=2.0.0"]
async = ["motor>=3.0.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "mongomock>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.0.0",
    "pre-commit>=3.0.0",
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "tox>=4.0.0",
]
all = ["mongoflow[cache,validation,async]"]

[project.urls]
"Homepage" = "https://github.com/seu-usu
